tests/baselines/reference/doExpressionsError.errors.txt
tests/cases/compiler/doExpressionsError.ts(4,10): error TS1434: Declaration or iteration cannot present at end of the do expression
tests/cases/compiler/doExpressionsError.ts(4,10): error TS1436: A var declaration cannot be used within a do expression unless the target is ESNext.
tests/cases/compiler/doExpressionsError.ts(5,19): error TS1434: Declaration or iteration cannot present at end of the do expression
tests/cases/compiler/doExpressionsError.ts(6,10): error TS1434: Declaration or iteration cannot present at end of the do expression
tests/cases/compiler/doExpressionsError.ts(7,10): error TS1434: Declaration or iteration cannot present at end of the do expression
tests/cases/compiler/doExpressionsError.ts(8,16): error TS1434: Declaration or iteration cannot present at end of the do expression
tests/cases/compiler/doExpressionsError.ts(9,15): error TS1434: Declaration or iteration cannot present at end of the do expression
tests/cases/compiler/doExpressionsError.ts(13,10): error TS1434: Declaration or iteration cannot present at end of the do expression
tests/cases/compiler/doExpressionsError.ts(14,10): error TS1434: Declaration or iteration cannot present at end of the do expression
tests/cases/compiler/doExpressionsError.ts(15,10): error TS1434: Declaration or iteration cannot present at end of the do expression
tests/cases/compiler/doExpressionsError.ts(16,10): error TS1434: Declaration or iteration cannot present at end of the do expression
tests/cases/compiler/doExpressionsError.ts(17,10): error TS1434: Declaration or iteration cannot present at end of the do expression
tests/cases/compiler/doExpressionsError.ts(24,10): error TS1436: A var declaration cannot be used within a do expression unless the target is ESNext.
tests/cases/compiler/doExpressionsError.ts(44,9): error TS1437: The last if statement in the do expression must have an else branch.
tests/cases/compiler/doExpressionsError.ts(44,9): error TS7030: Not all code paths return a value.


==== tests/cases/compiler/doExpressionsError.ts (15 errors) ====
    // No iteration / declaration at the end
    
    ;[
        do { var a = 1 },
             ~~~~~~~~~
!!! error TS1434: Declaration or iteration cannot present at end of the do expression
             ~~~~~~~~~
!!! error TS1436: A var declaration cannot be used within a do expression unless the target is ESNext.
        do { function x() { } },
                      ~
!!! error TS1434: Declaration or iteration cannot present at end of the do expression
        do { const a = 1 },
             ~~~~~~~~~~~
!!! error TS1434: Declaration or iteration cannot present at end of the do expression
        do { let a = 1 },
             ~~~~~~~~~
!!! error TS1434: Declaration or iteration cannot present at end of the do expression
        do { class T {} },
                   ~
!!! error TS1434: Declaration or iteration cannot present at end of the do expression
        do { enum T {} },
                  ~
!!! error TS1434: Declaration or iteration cannot present at end of the do expression
    ]
    
    ;[
        do { for (const x of []) {} },
             ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1434: Declaration or iteration cannot present at end of the do expression
        do { for (const x in {}) {} },
             ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1434: Declaration or iteration cannot present at end of the do expression
        do { for (let i = 0; i < [].length; i++) {} },
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1434: Declaration or iteration cannot present at end of the do expression
        do { while(true) {} },
             ~~~~~~~~~~~~~~
!!! error TS1434: Declaration or iteration cannot present at end of the do expression
        do { do {} while(true) }
             ~~~~~~~~~~~~~~~~~
!!! error TS1434: Declaration or iteration cannot present at end of the do expression
    ]
    ;
    
    // But in non-end position
    
    ;[
        do { var a = 1; a },
             ~~~~~~~~~~
!!! error TS1436: A var declaration cannot be used within a do expression unless the target is ESNext.
        do { function x() { }; x },
        do { const a = 1; a },
        do { let a = 1; a },
        do { class T {}; T },
        do { enum T {}; T },
    ]
    
    ;[
        do { for (const x of []) {}; 1 },
        do { for (const x in {}) {}; 1 },
        do { for (let i = 0; i < [].length; i++) {}; 1 },
        do { while(true) {}; 1 },
        do { do {} while(true); 1 }
    ]
    
    // No if-without-else in the last position
    
    ;[
        do {
            if (true) true;
            ~~~~~~~~~~~~~~~
!!! error TS1437: The last if statement in the do expression must have an else branch.
            ~~~~~~~~~~~~~~~
!!! error TS7030: Not all code paths return a value.
        }
    ]
    